src/test/resources/semantic/error/TS_ERROR_ATRIBUTO_DUPLICADO_HEREDADO.ru
/?
/?
/?
/? un atributo no puede tener el mismo nombre que un atributo heredado, sin importar visibilidad
struct A{
    pri Int a;
}

struct B:A{
    Int a;
}

start{
    
}